--- a/document/MainMatter/Proposal.tex
+++ b/document/MainMatter/Proposal.tex
@@ -173,7 +173,7 @@ los eventos y la determinación de las piezas importantes dentro de la estructur
 Se busca que el texto producido tenga cierto grado de variabilidad y que sea correcto en cuanto a estructura y gramática.
 
 
-\subsection{Planificación de contenido}
+\subsubsection{Planificación de contenido}
 
     En orden de estructurar el texto a producir así como determinar los eventos relevantes de un partido se hizo un análisis basado en 
 corpus (~\cite{reiter_dale_2000}). Se seleccinaron 4 jornadas (las 22,23,24,25) de la Liga Española de Fútbol Profesional de la temporada 
@@ -182,11 +182,28 @@ fueron: el \textit{Diario AS\footnote[1]{https://as.com/}} en su versión web \t
 \textit{ESPN Deportes\footnote[2]{https://espndeportes.espn.com/}}. Para determinar que eventos eran narrados en cada crónica se 
 estudiaron los eventos ocurridos en cada partido anotados por una tercera fuente, el sitio estadístico \textit{www.whoscored.com}. 
 De los 40 juegos se hizo una selección de 15 que tuvieran presente la información en ambos medios para poder constrastar. Los resultados de las 
-menciones de cada evento se pueden obeservar en la tabla (\ref{tabla-eventos}).\\
+menciones de cada evento se pueden obeservar en la tabla (\ref{tab:tablaeventos}).\\
+
+\begin{table}[]
+    \begin{center}
+    \begin{tabular}{|c|cccc|}
+    \hline
+                                  & \multicolumn{4}{c|}{\textbf{Resumen de 15 juegos}}                                                                                                                                                                \\ \hline
+    \textbf{Medio}                & \multicolumn{2}{c|}{\textbf{AS}}                                                                                   & \multicolumn{2}{c|}{\textbf{ES}}                                                             \\ \hline
+    \textbf{Eventos}              & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Frecuencia en \\ reportes\end{tabular}} & \multicolumn{1}{c|}{\%}   & \multicolumn{1}{c|}{\begin{tabular}[c]{@{}c@{}}Frecuencia en\\ reportes\end{tabular}} & \%   \\ \hline
+    \textbf{Goles}                & \multicolumn{1}{c|}{52/52}                                                             & \multicolumn{1}{c|}{100}  & \multicolumn{1}{c|}{52/52}                                                            & 100  \\ \hline
+    \textbf{Penaltis Marcados}    & \multicolumn{1}{c|}{6/6}                                                               & \multicolumn{1}{c|}{100}  & \multicolumn{1}{c|}{6/6}                                                              & 100  \\ \hline
+    \textbf{Penaltis No marcados} & \multicolumn{1}{c|}{2/2}                                                               & \multicolumn{1}{c|}{100}  & \multicolumn{1}{c|}{1/2}                                                              & 50   \\ \hline
+    \textbf{Asistencias}          & \multicolumn{1}{c|}{25/40}                                                             & \multicolumn{1}{c|}{62.5} & \multicolumn{1}{c|}{27/40}                                                            & 67.5 \\ \hline
+    \textbf{Expulsiones}          & \multicolumn{1}{c|}{6/7}                                                               & \multicolumn{1}{c|}{87.5} & \multicolumn{1}{c|}{5/7}                                                              & 71.4 \\ \hline
+    \end{tabular}
+    \end{center}
+    \caption{Análisis de eventos reportados en crónicas de fútbol}
+    \label{tab:tablaeventos}
+\end{table}
 
 
-
-            INSERTAR TABLA EVENTOS.\\
+%INSERTAR TABLA EVENTOS.\\
 
     Se determinan tres piezas comunicativas: las presentación del resultado, la descripción de los eventos relevantes y 
 la mención de jugadores con una destacada actuación. En base a esto se definió la siguiente estructura:
@@ -272,7 +289,7 @@ reducido sus puntos en un diez por ciento. El jugador con mayor puntuación del 
 
 
 
-\subsection{Realización}
+\subsubsection{Realización}
 
     En la etapa de realización del texto, vemos unificadas las tareas de carácter lingüístico tal y como se presentó en \ref{chapter:state-of-the-art}. 
 En este proceso se definen las palabras y expresiones con las que expresar el contenido seleccionado bajo la estructura definida. El enfoque basado en reglas 
@@ -319,14 +336,13 @@ Las \textit{plantilla de resultado} se construyeron en distintos grupos en depen
         \item Se define en tanda de penaltis.
     \end{itemize}
 
-    Ejemplos de construcción:
+    Ejemplos de construcción:\\
 
         \begin{itemize}
            \item  \textit{ con  $<$ asistencia $>$ hinchas en las gradas del estadio $<$ estadio $>$, en tiempo extra $<$ equipo\_ganador $>$ superó $<$ equipo\_ganador\_goles $>$ a \\$<$ equipo\_perdedor\_goles $>$ a $<$ equipo\_perdedor $>$ }
         
             \item  \textit{$<$ equipo\_ganador $>$ goleó a $<$ equipo\_perdedor $>$ $<$ equipo\_ganador\_goles $>$ \\a $<$ equipo\_perdedor\_goles $>$ en el estadio $<$ estadio $>$}
         \end{itemize}
-
 
 
 \textbf{Eventos principales}\\
